--- a/media.html
+++ b/media.html
@@ -123,24 +123,24 @@
          	 </div>
 		       
 		   <h3>Collaborators</h3>
-		   <p><em>On Second-language learning of speech prosody</em></p>
+		   <p>On <em><b>Second-language learning of speech prosody</b></em></p>
 			  <ol> 
 			    <li class="publication">Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/" target="_blank">Link</a>]</li>
 			    <li class="publication">Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/" target="_blank">Link</a>]</li>
 			  </ol>
-		   <p><em>On Sleep-dependent consolidation of lexical tones</em></p>
+		   <p>On <em><b>Sleep-dependent consolidation of lexical tones</b></em></p>
 			  <ol> 
 			    <li class="publication">Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/" target="_blank">Link</a>]</li>
 			    <li class="publication">Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang" target="_blank">Link</a>]</li>
 			  </ol>
-		   <p><em>On Aging, cognitive, and language learning</em></p>
+		   <p>On <em><b>Aging, cognitive, and language learning</b></em></p>
 			  <ol> 
 			    <li class="publication">Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html" target="_blank">Link</a>]</li>
 			  </ol>
 		   <h3>Collaborative labs & centers</h3>
-		   <p><em>Internal</em></p>
+		   <p><b>Internal</b></p>
 			  <ol> 
 			    <li class="publication">SHSS Eyetracking Laboratory (Rm 3302) [<a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">Link</a>]</li>
 			    <li class="publication">Center for Chinese Linguistics (Rm 2388) [<a href="https://ccl.hkust.edu.hk/" target="_blank">Link</a>]</li>
@@ -148,7 +148,7 @@
 			    <li class="publication">Counseling and Wellness Center [<a href="https://counsel.hkust.edu.hk/" target="_blank">Link</a>]</li>
 			    <li class="publication">Institute for Emerging Market Studies [<a href="https://iems.ust.hk/home" target="_blank">Link</a>]</li>
 			  </ol>
-		   <p><em>External</em></p>
+		   <p><b>External</b></p>
 			  <ol> 
 			    <li class="publication">Research Center for Aging, Language and Care, Tongji University [<a href="https://ageing.tongji.edu.cn/index.html" target="_blank">Link</a>]</li>
 			    <li class="publication">Research Center for Language, Cognition, and Neuroscience, PolyU [<a href="https://www.polyu.edu.hk/cbs/rclcn/" target="_blank">Link</a>]</li>
