--- a/media.html
+++ b/media.html
@@ -123,18 +123,18 @@
          	 </div>
 		       
 		   <h3>Collaborators</h3>
-		   <p>On <em><b>Second-language learning of speech prosody</b></em></p>
+		   <p><b>On <em>Second-language learning of speech prosody</b></em></p>
 			  <ol> 
 			    <li class="publication">Dr. Sang-Im Lee-Kim, Hanyang University, Korea [<a href="https://sites.google.com/site/sangimleekim/" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Annie Tremblay, University of Texas at El Paso, U.S. [<a href="https://www.annietremblay.com/" target="_blank">Link</a>]</li>
 			    <li class="publication">Dr. Jingwei Zhang, University of Macau [<a href="https://fah.um.edu.mo/jingwei-zhang/" target="_blank">Link</a>]</li>
 			  </ol>
-		   <p>On <em><b>Sleep-dependent consolidation of lexical tones</b></em></p>
+		   <p><b>On <em>Sleep-dependent consolidation of lexical tones</b></em></p>
 			  <ol> 
 			    <li class="publication">Dr. Xiaoqing Hu, University of Hong Kong [<a href="https://psychology.hku.hk/people/hu-xiaoqing/" target="_blank">Link</a>]</li>
 			    <li class="publication">Dr. Caicai Zhang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/caicai-zhang" target="_blank">Link</a>]</li>
 			  </ol>
-		   <p>On <em><b>Aging, cognitive, and language learning</b></em></p>
+		   <p><b>On <em>Aging, cognitive, and language learning</b></em></p>
 			  <ol> 
 			    <li class="publication">Prof. William Wang, Hong Kong Polytechnic University [<a href="https://research.polyu.edu.hk/en/persons/william-shi-yuan-wang" target="_blank">Link</a>]</li>
 			    <li class="publication">Prof. Xiaohu Yang, Tongji University [<a href="https://ageing.tongji.edu.cn/info/1014/1333.html" target="_blank">Link</a>]</li>
