--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                            </p>
                       </div>
                       <div class="image-content">
-                          <img src="files/Theme1.PNG" alt="Illustration" class="responsive-img theme-img">
+                          <img src="files/Theme1.PNG" style="width:80%; height:80%;" alt="Illustration" class="responsive-img theme-img">
                       </div>
                   </div>
                   
@@ -266,7 +266,7 @@
                           </p>
                       </div>
                       <div class="image-content">
-                          <img src="files/Theme2.PNG" alt="Illustration" class="responsive-img theme-img">
+                          <img src="files/Theme2.PNG" style="width:80%; height:80%;" alt="Illustration" class="responsive-img theme-img">
                       </div>
                   </div>
                   
@@ -283,7 +283,7 @@
                          </p>
                       </div>
                       <div class="image-content">
-                          <img src="files/Theme3.PNG" alt="Illustration" class="responsive-img theme-img">
+                          <img src="files/Theme3.PNG" style="width:80%; height:80%;" alt="Illustration" class="responsive-img theme-img">
                       </div>
                   </div>
                <hr>
