--- a/facilities.html
+++ b/facilities.html
@@ -14,6 +14,10 @@
       <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
       <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
+         li {
+             font-size: 16px;
+             line-height: 1.6;
+         }
          a {
              color: #5048D3;
          }
@@ -79,6 +83,11 @@
             padding-top: 20px;
             border-top: 1px solid #ccc;
          }
+	.parallel-text {
+	  display: flex;
+	  justify-content: space-between;
+	  gap: 20px;
+	}
       </style>
    </head>
    <body>
@@ -145,24 +154,21 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p style="text-align: left;margin-top: 5px;">
-				   <span style="font-size: 22px;">Main testing station</span></p>
+                           <p>Main testing station</p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p style="margin-top: 5px;">
-				   <span style="font-size: 22px;">EEG Station</span>
-				<br>▪ Neuroscan EEG system (64CH)</p>
+                           <p>EEG Station</p>
+				<li>Neuroscan EEG system (64CH)</li>
                         </div>
                     </div>
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p style="margin-top: 5px;">
-				   <span style="font-size: 22px;">Eye-tracking room</span>
-				<br>▪ Eyelink Portable Duo (Rm 3302)</p>
+                           <p>Eye-tracking room</p>
+				<li>Eyelink Portable Duo (Rm 3302)</li>
                         </div>
                     </div>
 		 
@@ -208,29 +214,33 @@
 			    <br>
 			    <br>
 		    </div>
-		    <div class="divide-text">
-		        <h3>Hardware</h3>
-			<h3>Software</h3>
-			    <br>
-			    <br>
-		    </div>
-		    <div class="parallel-text">
-  			  <p>▪ 4 <a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a>
-				<br>▪ 2 testing desktop computers
-				<br>▪ 2 work/data analysis computers
-				<br>▪ 1 <a href="https://compumedicsneuroscan.com/applications/eeg/" target="_blank">Neuroscan EEG system (64CH)</a>
-				<br>▪ 1 <a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (Rm 3302) 
-				<br>▪ 1 <a href="https://www.grason-stadler.com/products/audiometers/gsi-audiostar-pro?keyword=gsi%20audiometer%20price&matchtype=b&sncid=13&utm_source=google&utm_medium=cpc&utm_campaign=brand_product_specific&adgroup=audiostar%20pro&gclid=CjwKCAjwzY2bBhB6EiwAPpUpZkeP7sbYVJ1pv71uB97lG9wQIlCzWY4ZbuepqVSg3AaU3srNVE6NehoCBUYQAvD_BwE" target="_blank">Clinical Audiometer (GSI 18 model of Grason-Stadler)</a>
-				<br>▪ 1 <a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a>
-				<br>▪ 1 laptop computer
-				<br>▪ 1 computer projector
-			  </p>
- 		          <p>▪ Presentation: <a href="https://pstnet.com/products/e-prime/" target="_blank">E-Prime 3.0</a>, <a href="https://www.paradigmexperiments.com/" target="_blank">Paradigm</a>, <a href="https://www.psychopy.org/" target="_blank">PsychoPy</a>​, Matlab
-				<br>▪ Data analysis: <a href="https://www.ibm.com/spss" target="_blank">SPSS</a>​, R, Matlab, Python
-				<br>▪ Speech: <a href="https://www.fon.hum.uva.nl/praat/" target="_blank">Praat</a>
-				<br>▪ General: Google drive, Microsoft Office
-			  </p>
-		    </div>
+
+			<div class="parallel-text">
+			  <div class="column">
+			    <h3>Hardware</h3>
+			    <ul>
+			      <li class="publication"><a href="https://www.fitbit.com/global/us/products/smartwatches/versa" target="_blank">Fitbit Versa 2 (actigraphy)</a></li>
+			      <li class="publication">2 testing desktop computers</li>
+			      <li class="publication">2 work/data analysis computers</li>
+			      <li class="publication"><a href="https://compumedicsneuroscan.com/applications/eeg/" target="_blank">Neuroscan EEG system (64CH)</a></li>
+			      <li class="publication"><a href="https://www.sr-research.com/eyelink-portable-duo/" target="_blank">EyeLink Portable Duo</a> (Rm 3302)</li>
+			      <li class="publication"><a href="https://www.grason-stadler.com/products/audiometers/gsi-audiometer-pro" target="_blank">Clinical Audiometer (GSI 18 model of Grason-Stadler)</a></li>
+			      <li class="publication"><a href="https://tascam.com/int/product/dr-44wl/top/" target="_blank">Tascam DR-44WL Handheld Recorder with Wi-Fi</a></li>
+			      <li class="publication">1 laptop computer</li>
+			      <li class="publication">1 computer projector</li>
+			    </ul>
+			  </div>
+			  <div class="column">
+			    <h3>Software</h3>
+			    <ul>
+			      <li class="publication">Presentation: <a href="https://pstnet.com/products/e-prime/" target="_blank">E-Prime 3.0</a>, <a href="https://www.paradigmexperiments.com/" target="_blank">Paradigm</a>, <a href="https://www.psychopy.org/" target="_blank">PsychoPy</a>, Matlab</li>
+			      <li class="publication">Data analysis: <a href="https://www.ibm.com/spss" target="_blank">SPSS</a>, R, Matlab, Python</li>
+			      <li class="publication">Speech: <a href="https://www.fon.hum.uva.nl/praat/" target="_blank">Praat</a></li>
+			      <li class="publication">General: Google Drive, Microsoft Office</li>
+			    </ul>
+			  </div>
+			</div>
+
 	       </body>
 <hr>
 		
