--- a/facilities.html
+++ b/facilities.html
@@ -160,7 +160,7 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p>EEG Station</p>
+                           <p style="text-align: center;">EEG Station</p>
 				<li>Neuroscan EEG system (64CH)</li>
                         </div>
                     </div>
