--- a/facilities.html
+++ b/facilities.html
@@ -154,21 +154,21 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p>Main testing station</p>
+                           <p><b>Main testing station</b></p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p style="text-align: center;">EEG Station</p>
+                           <p style="text-align: center;"><b>EEG Station</b></p>
 				<li>Neuroscan EEG system (64CH)</li>
                         </div>
                     </div>
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p>Eye-tracking room</p>
-				<li>Eyelink Portable Duo (Rm 3302)</li>
+                           <p style="text-align: center;>Eye-tracking room</p>
+				<li><b>Eyelink Portable Duo (Rm 3302)</b></li>
                         </div>
                     </div>
 		 
@@ -210,7 +210,7 @@
 		<body>
 			<br>
 		    <div class="centered-text">
-		        <p><a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank">Click to book</a> (For internal use)</p>
+		        <p style="margin-top: 20px;"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank">Click to book</a> (For internal use)</p>
 			    <br>
 			    <br>
 		    </div>
