--- a/facilities.html
+++ b/facilities.html
@@ -210,7 +210,7 @@
 		<body>
 			<br>
 		    <div class="centered-text">
-		        <p><a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank">Click to book</a> (For internal use)</p>
+		        <p style="margin-top: 20px;"><a href="https://calendar.google.com/calendar/u/0/r?pli=1" target="_blank">Click to book</a> (For internal use)</p>
 			    <br>
 			    <br>
 		    </div>
