--- a/facilities.html
+++ b/facilities.html
@@ -167,8 +167,8 @@
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p style="text-align: center;">Eye-tracking room</p>
-				<li><b>Eyelink Portable Duo (Rm 3302)</b></li>
+                           <p style="text-align: center;"><b>Eye-tracking room</b></p>
+				<li>Eyelink Portable Duo (Rm 3302)</li>
                         </div>
                     </div>
 		 
