--- a/people.html
+++ b/people.html
@@ -109,7 +109,7 @@
    </div>
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
-<div class="container" style="max-width: 1200px; margin: 0 auto;">
+<div class="container" style="max-width: 1200px; margin: 0 auto; margin-top: 10px;"">
 	<div class="span10">
 	<h3>Current Team Members</h3>
 	</div>
