--- a/people.html
+++ b/people.html
@@ -109,9 +109,9 @@
    </div>
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
-<div class="container" style="max-width: 1200px; margin: 0 auto; margin-top: 10px;"">
+<div class="container" style="max-width: 1200px; margin: 0 auto;"">
 	<div class="span10">
-	<h3>Current Team Members</h3>
+	<h3 style="margin-top: 0;">Current Team Members</h3>
 	</div>
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
 <div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
