--- a/publications.html
+++ b/publications.html
@@ -116,7 +116,7 @@
 	<hr>
 	<section>
 	  <div class="page-header">
-	    <h4>Current Team Members</h4>
+	    <h4>Publications</h4>
 	  </div>
 	  <div class="page-header">
 	    <h3>Journal Articles</h3>
