--- a/publications.html
+++ b/publications.html
@@ -115,7 +115,7 @@
    
 	<hr>
 	<section>
-	  <div class="page-header">
+	  <div class="row-fluid">
 	    <h4>Publications</h4>
 	  </div>
 	  <div class="page-header">
