--- a/media.html
+++ b/media.html
@@ -112,13 +112,13 @@
                 </div>
             </div>
         </div>
-         <hr>
+
 	      
 
 
 
                <section id="mediacoverage">
-         	 <div class="page-header">
+         	 <div class="row-fluid">
           	   <h4>Collaboration and Outreach</h4>
          	 </div>
 		       
