--- a/facilities.html
+++ b/facilities.html
@@ -112,7 +112,7 @@
         </div>
 	<hr>
 	 <section id="Facilities">
-                  <div class="page-header">
+                  <div class="row-fluid">
                      <h4>Facilities</h4>
                   </div>
 		<meta charset="UTF-8">
