--- a/facilities.html
+++ b/facilities.html
@@ -113,7 +113,7 @@
 
 	 <section id="Facilities">
                   <div class="row-fluid">
-                     <h4>Facilities</h4>
+                     <h4 style="margin-bottom: 40px;">Facilities</h4>
                   </div>
 		<meta charset="UTF-8">
              <meta name="viewport" content="width=device-width, initial-scale=1.0">
