--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
                             <p>
                         </div>
                     </div>
-                    <div style="flex: 2; margin-up: 40px;"">
+                    <div style="flex: 2; margin-up: 40px;">
                         <img src="files/Photo_Homepage.jpg" class="large-img" alt="Photo Homepage">
                     </div>
                    </div>  
