--- a/index.html
+++ b/index.html
@@ -131,6 +131,7 @@
                      height: auto;
                      display: block;
                      margin: 0 auto;
+                     margin-top: 20px;
                  }
                 .text {
                      text-align: center;
