--- a/people.html
+++ b/people.html
@@ -206,7 +206,7 @@
  <section id="principalinvestigator">
     <div class="row-fluid" style="padding-top: 60px;">
        <div class="span3">
-	  <img src="thumbs/Photo_Quentin.jpeg" style="height:70%;" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
+	  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="height:70%; margin-top: 0;"/>
        </div>
        <div class="span9 offset style="margin-top: 0;">
 	  <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
@@ -226,7 +226,7 @@
 <section id="staff">
    <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
-         <img src="thumbs/Photo_Susu.jpg" style="height:50%;" alt="Susu Lai" style="margin-top: 0;"/>
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="height:50%; margin-top: 0;"/>
       </div>
       <div class="span9 offset style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
