--- a/people.html
+++ b/people.html
@@ -109,9 +109,9 @@
    </div>
 
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
-<div class="container" style="max-width: 1200px; margin: 0 auto;"">
+<div class="container" style="max-width: 1200px; margin: 0 auto;">
 	<div class="span10">
-	<h3 style="margin-top: 30px;">Current Team Members</h3>
+	<h3>Current Team Members</h3>
 	</div>
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
 <div class="container" style="width: 60%; height: 60%; margin: 0 auto;">
@@ -199,34 +199,27 @@
       </div>
    </div>
 </div>
-
-   <!-- Principal Investigator Section -->
-   <hr>
-
- <section id="principalinvestigator">
-    <div class="row-fluid" style="padding-top: 60px;">
-       <div class="span3">
-	  <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="height:70%; margin-top: 0;"/>
-       </div>
-       <div class="span9 offset style="margin-top: 0;">
-	  <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
-	  <p style="font-size: 18px; margin-bottom: 5px;"><b>Principal Investigator</b></p>
-	  <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
-	  <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;"><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
-	  <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
-	  <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the <a href="https://linguistics.ku.edu/">Department of Linguistics</a>, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
-       </div>
-    </div>
- </section>
-
-<hr>
+</div>
 
 
 
 <section id="staff">
    <div class="row-fluid" style="padding-top: 60px;">
       <div class="span3">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="height:50%; margin-top: 0;"/>
+         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
+      </div>
+      <div class="span9 offset style="margin-top: 0;">
+         <h4 style="text-align: left; margin-top: 0;">Quentin Zhen QIN 秦震 Ph.D.</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Principal Investigator</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; ">hmzqin@ust.hk; <a href="files/C.V._Zhen Qin_Research.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;"><a href="https://sites.google.com/site/qinzhenquentin/">Personal Website</a></p>
+	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-6117-7809">https://orcid.org/0000-0002-6117-7809</a></p>
+         <p>Quentin is an Assistant Professor of Linguistics in the Division of Humanities at the Hong Kong University of Science and Technology. He is also Associate Director of ​Center for Chinese Linguistics and a faculty associate of Center for Aging Science, HKUST. He got his Ph.D degree in Linguistics from the <a href="https://linguistics.ku.edu/">Department of Linguistics</a>, University of Kansas. Prior to joining the faculty at HKUST, he worked as Postdoctoral Researcher at the Research Center for Language, Cognition, and Neuroscience, Hong Kong Polytechnic University.</p>
+      </div>
+   </div>
+   <div class="row-fluid" style="padding-top: 60px;">
+      <div class="span3">
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="margin-top: 0;"/>
       </div>
       <div class="span9 offset style="margin-top: 0;">
          <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
