--- a/people.html
+++ b/people.html
@@ -204,9 +204,9 @@
 
 
 <section id="staff">
-   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 50px;">
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
       <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN" style="margin-top: 0;"/>
+         <img src="thumbs/Photo_Quentin.jpeg" alt="Quentin Zhen QIN"  style="width: 200px; height: auto;"/>
       </div>
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; margin-left: 55px">Quentin Zhen QIN 秦震 Ph.D.</h4>
