--- a/people.html
+++ b/people.html
@@ -218,30 +218,30 @@
       </div>
    </div>
    <hr>
-   <div class="row-fluid" style="padding-top: 60px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 200px; height: auto;"/>
       </div>
-      <div class="span9 offset style="margin-top: 0;">
-         <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Lab Manager & Research Assistant</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; ">hmsusu@ust.hk; <a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></p>
-         <p>Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Lab Manager & Research Assistant</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-left: 55px;">hmsusu@ust.hk; <a href="https://www.researchgate.net/profile/Susu-Lai">ResearchGate</a>, <a href="files/CV_Susu LAI.pdf">CV</a></p>
+         <p style="text-align: justify; margin-left: 55px;">Susu graduated from the University of Hong Kong with an MA degree in Linguistics. She has a strong interest in psycholinguistics, specifically understanding how individuals acquire and process the prosodic features of a second language. In her previous research project, she explored implicit learning of lexical stress in second language acquisition. She is currently involved in an EEG study on L2 learners' consolidation of Cantonese tones during daytime naps.</p>
       </div>
    </div>
 
 <hr>
 	
-   <div class="row-fluid" style="padding-top: 60px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Jiayu.jpg" alt="Jiayu Liang" style="width: 200px; height: auto;"/>
       </div>   
-      <div class="span9 offset style="margin-top: 0;">
-         <h4 style="text-align: left; margin-top: 0;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Research Assistant</b></p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Research Assistant</b></p>
 	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
-         <p style="font-size: 18px; margin-top: 5px; "><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
-         <p>Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
+         <p style="font-size: 18px; margin-top: 5px;margin-left: 55px; "><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
+         <p style="text-align: justify; margin-left: 55px;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
       </div>
    </div>
 </section>
@@ -249,46 +249,46 @@
 <hr>
 	
 <section id="student">
-   <div class="row-fluid" style="padding-top: 60px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Jeremy.jpg" alt="Jeremy, Yin To CHUI" style="width: 200px; height: auto;"/>
       </div>
-      <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="font-size: 23px; text-align: left; margin-top: 0;" >Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Ph.D Student (HKPFS awardee)</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
-         <p>Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
-      </div>
-   </div>
-
-<hr>
-	
-   <div class="row-fluid" style="padding-top: 60px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="margin-top: 0;"/>
-      </div>   
-      <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="text-align: left; margin-top: 0;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;"><b>Ph.D Student (HKPFS awardee)</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0009-0000-1794-9747​">https://orcid.org/0009-0000-1794-9747​</a></p>
-         <p>Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Jeremy, Yin To CHUI 徐彥韜 (BA: CUHK; MA: PolyU; MPhil: UST)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">ytchuiac@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yin-To-Chui">ResearchGate</a>, <a href="files/CV_Jeremy.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0000-0002-2169-086X">https://orcid.org/0000-0002-2169-086X</a></p>
+         <p style="text-align: justify; margin-left: 55px;">Jeremy graduated with an MA degree in Teaching Chinese as a Foreign Language from HK PolyU. He is interested in speech perception as well as the cognitive and computational mechanisms behind perceptual learning. Currently, he is working on whether, and to what extent, younger and older adults make statistical inferences (e.g., distributional information, word-referent co-occurrences) in the implicit perceptual learning L2 lexical tone categories. His previous MPhil project studied the statistical learning of Mandarin lexical tones and how individual differences played a role in learning. Jeremy's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
       </div>
    </div>
 
 <hr>
 	
-   <div class="row-fluid" style="padding-top: 60px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="width: 200px; height: auto;"/>
       </div>   
-      <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="text-align: left;margin-top: 0;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px;"><b>MPhil Student</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
-         <p>Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;margin-left: 55px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px;margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0009-0000-1794-9747​">https://orcid.org/0009-0000-1794-9747​</a></p>
+         <p style="text-align: justify; margin-left: 55px;">Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
+      </div>
+   </div>
+
+<hr>
+	
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 60px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="width: 200px; height: auto;"/>
+      </div>   
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>MPhil Student</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
+         <p style="text-align: justify; margin-left: 55px;">Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
       </div>
    </div>
 </section>
@@ -299,22 +299,22 @@
    <div class="row-fluid" style="text-align: center;">
       <h4>Past Members and Alumni</h4>
    </div>
-   <div class="row-fluid" style="padding-top: 40px;">
-      <div class="span3">
-         <img src="thumbs/Photo_Cindy.png" style="width:80%; height:80%;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 40px;">
+      <div class="image-content" style="flex: 0 0 auto;">
+         <img src="thumbs/Photo_Cindy.png" style="height:80%; width: 150px;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="text-align: left;margin-top: 0; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-         <p>Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
+         <p style="text-align: justify; margin-left: 55px;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
-   <div class="row-fluid" style="padding-top: 40px;">
-      <div class="span3">
+   <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 40px;">
+      <div class="image-content" style="flex: 0 0 auto;">
          <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu" style="margin-top: 0;"/>
       </div>
-      <div class="span9 offset" style="margin-top: 0;">
-         <h4 style="text-align: left;margin-top: 0; font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-         <p>Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+      <div class="text-content" style="flex: 1;">
+         <h4 style="text-align: left; margin-top: 0; margin-left: 55px; font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+         <p style="text-align: justify; margin-left: 55px;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
    <div class="row-fluid">
