--- a/people.html
+++ b/people.html
@@ -239,7 +239,7 @@
       <div class="text-content" style="flex: 1;">
          <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Jiayu LIANG 梁家瑜 (BA: Shandong U)</h4>
 	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Research Assistant</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">hmjyliang@ust.hk; <a href="https://www.researchgate.net/profile/Jiayu-Liang-14">ResearchGate</a>, <a href="files/CV_Jiayu LIANG.pdf">CV</a></p>
          <p style="font-size: 18px; margin-top: 5px;margin-left: 55px; "><a href="https://lexie-liang.github.io/LiangJiayu.github.io/">Personal Website</a></p>
          <p style="text-align: justify; margin-left: 55px;">Jiayu holds a BA in English from Shandong University. Her research interests focus on the production and perception of non-native languages, as well as the cross-domain transfer effects between music and language experience. For her undergraduate thesis, Jiayu employed eye-tracking methodology to investigate how Mandarin speakers' musical aptitude influences their perception and production of English vowels. Currently, she is involved in an eye-tracking study examining L2 learners' perceptual learning and consolidation of English lexical stress.</p>
       </div>
@@ -304,17 +304,17 @@
          <img src="thumbs/Photo_Cindy.png" style="height:80%; width: 150px;" alt="Cindy, Rui JIN" style="margin-top: 0;"/>
       </div>
       <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
-         <p style="text-align: justify; margin-left: 55px;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
+         <h4 style="text-align: left; margin-top: 0; margin-left: 60px; font-weight: normal; font-size: 18px;">· Cindy, Rui JIN 金蕊 (Senior Research Assistant, 2021-2022)</h4>
+         <p style="text-align: justify; margin-left: 70px;">Cindy is currently a Ph.D student in Psychology at the University of Florida.</p>
       </div>
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 40px;">
       <div class="image-content" style="flex: 0 0 auto;">
-         <img src="thumbs/Photo_Ruofan_edited.jpg" style="width:80%; height:80%;" alt="Ruofan Wu" style="margin-top: 0;"/>
+         <img src="thumbs/Photo_Ruofan_edited.jpg"  style="height:80%; width: 150px;" alt="Ruofan Wu" style="margin-top: 0;"/>
       </div>
       <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px; font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
-         <p style="text-align: justify; margin-left: 55px;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
+         <h4 style="text-align: left; margin-top: 0; margin-left: 65px; font-weight: normal; font-size: 18px;">· Ruofan WU 吳若繁 (Research Assistant, 2022-2023)</h4>
+         <p style="text-align: justify; margin-left: 65px;">Ruofan is currently a Ph.D student at the Hong Kong Polytechnic University.</p>
       </div>
    </div>
    <div class="row-fluid">
