--- a/people.html
+++ b/people.html
@@ -296,7 +296,7 @@
 <hr>
 	
 <section id="alumni">
-   <div class="row-fluid" style="text-align: center;">
+   <div class="row-fluid" style="text-align: center; padding-top: 20px;">
       <h4>Past Members and Alumni</h4>
    </div>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 15px;">
@@ -336,7 +336,7 @@
 	
 <section id="Opportunity">
    <div class="row-fluid" style="text-align: center;">
-      <h4 style="margin-top: 60px; margin-bottom: 20px;">Opportunity</h4> <!-- Center the header -->
+      <h4 style="margin-top: 60px; margin-bottom: 40px; margin-top: 20px;">Opportunity</h4> <!-- Center the header -->
    </div>
    <div class="row-fluid" style="display: flex; justify-content: center;">
       <div class="span9 offset1" style="text-align: left; width: auto; margin: 0 auto;"> <!-- Left-align content with max-width and centered container -->
