--- a/facilities.html
+++ b/facilities.html
@@ -154,20 +154,20 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p style="margin-up: 10px;"><b>Main testing station</b></p>
+                           <p style="margin-top: 10px; font-size: 24px">Main testing station</p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F2.jpg" class="img-2" alt="Facility 2">
 		        <div class="text-2">
-                           <p style="text-align: center; margin-up: 10px;"><b>EEG Station</b></p>
+                           <p style="margin-top: 10px; font-size: 24px">EEG Station</p>
 				<li>Neuroscan EEG system (64CH)</li>
                         </div>
                     </div>
 		    <div style="flex: 1;">
                         <img src="files/facilities_F3.jpg" class="img-3" alt="Facility 3">
 		        <div class="text-3">
-                           <p style="text-align: center; margin-up: 10px;"><b>Eye-tracking room</b></p>
+                           <p style="margin-top: 10px; font-size: 24px">Eye-tracking room</p>
 				<li>Eyelink Portable Duo (Rm 3302)</li>
                         </div>
                     </div>
