--- a/facilities.html
+++ b/facilities.html
@@ -154,7 +154,7 @@
                     <div style="flex: 1;padding: 0 15px 0 0;">
                         <img src="files/facilities_F1.png" class="img-1" alt="Facility 1">
                         <div class="text-1">
-                           <p style="margin-top: 10px; font-size: 24px">Main testing station</p>
+                           <p style="text-align:left; margin-top: 10px; font-size: 24px">Main testing station</p>
                         </div>
                     </div>
                     <div style="flex: 1;padding: 0 15px 0 0;">
