--- a/publications.html
+++ b/publications.html
@@ -19,10 +19,10 @@
              line-height: 1.6;
          }
          a {
-             color: #5048D3;
+             color: #333333;
          }
          a:hover {
-             color: #5048D3; /* Optional: Set a different color when hovering */
+             color: #333333; /* Optional: Set a different color when hovering */
          }
          ol {
             display: block;
