--- a/people.html
+++ b/people.html
@@ -124,7 +124,7 @@
                <div class="item active">
                   <img src="files/Photo1.jpg" class="carousel-image" alt="">
                   <div class="carousel-caption">
-                     <h4>2022 Farewell Lunch</h4>
+                     <h4 style="font-size: 14px;">2022 Farewell Lunch</h4>
                   </div>
                </div>
 
