--- a/people.html
+++ b/people.html
@@ -324,10 +324,10 @@
       </div>
       <br>
       <div class="span9 offset">
-         <p style="text-align: left;">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
-         <p style="text-align: left;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
-         <p style="text-align: left;">· Minzhi GONG (Research Assistant,  2020)</p>
-         <p style="text-align: left;">· Weijie TAN (Research Assistant,  2019)</p>
+         <p style="text-align: left; line-height: 1.6;">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left; line-height: 1.6;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left; line-height: 1.6;">· Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left; line-height: 1.6;">· Weijie TAN (Research Assistant,  2019)</p>
       </div>
    </div>
 </section>
