--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
             margin-top: 40px; /* Increase spacing above section headings */
             margin-bottom: 20px; /* Increase spacing below section headings */
             text-align: center; /* Center the heading */
+            line-height: 1.6;
          }
          h3 {
             font-size: 24px;
