--- a/index.html
+++ b/index.html
@@ -260,9 +260,9 @@
 
                
                   <!-- Second Content Block -->
-                  <div class="content-with-image"  style="display: flex; align-items: center; gap: -10px;">
+                  <div class="content-with-image" style="display: flex; align-items: center; gap: -10px; flex-wrap: wrap;">
                       <!-- Text Content -->
-                      <div class="text-content" style="flex: 1; text-align: justify;">
+                      <div class="text-content" style="flex: 1; text-align: justify; margin-bottom: 10px;">
                           <h3>Sleep-dependent consolidation of lexical tones</h3>
                           <p>
                               Recent evidence shows that sleep plays a crucial role in transforming newly acquired linguistic knowledge into long-term memory. Given unique characteristics of lexical tones (e.g., high talker-variability of pitch), there is still a vast unexplored area in sleep-mediated memory consolidation of tone learning. By combining behavioral experiments and brain imaging technologies (e.g., EEG), we are dedicated to exploring the relationship between sleep and tone learning, providing memory-based insights for cross-language and cross-age learning of lexical tones.
@@ -273,7 +273,7 @@
                           </p>
                       </div>
                       <!-- Image Content -->
-                      <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right;">
+                      <div class="image-content" style="flex: 0 0 auto; margin-left: -10px; text-align: right; width: 100%; max-width: 200px;">
                           <img src="files/Theme2.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
                       </div>
                   </div>
@@ -297,7 +297,7 @@
                        <img src="files/Theme3.PNG" style="width: 70%; height: auto; max-width: 200px;" alt="Illustration" class="responsive-img theme-img">
                    </div>
                   </div>
-
+               
                   <script>
                     // JavaScript动态调整样式
                     const updateContentLayout = () => {
