--- a/people.html
+++ b/people.html
@@ -54,6 +54,7 @@
             margin-top: 40px; /* Increase spacing above section headings */
             margin-bottom: 20px; /* Increase spacing below section headings */
             text-align: center; /* Center the heading */
+	    line-height: 1.6;
          }
          .contact-section h4 {
             text-align: left; /* Align the "Contact us!" heading to the left */
