--- a/people.html
+++ b/people.html
@@ -296,11 +296,11 @@
          <img src="thumbs/Photo_Yuqi.jpg" alt="Yuqi Wang" style="width: 100%; height: auto;"/>
       </div>   
       <div class="text-content" style="flex: 1; margin-bottom: 10px;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>Ph.D Student (HKPFS awardee)</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;margin-left: 55px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px;margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0009-0000-1794-9747​">https://orcid.org/0009-0000-1794-9747​</a></p>
-         <p style="text-align: justify; margin-left: 55px;">Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
+         <h4 style="text-align: left; margin-top: 0; ">Yuqi WANG 王宇琪 (BA: Tianjin U; MPhil: UST)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>Ph.D Student (HKPFS awardee)</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px;">ywangqi@connect.ust.hk; <a href="https://www.researchgate.net/profile/Yuqi-Wang-98">ResearchGate</a>, <a href="files/CV_Yuqi.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px;">ORCID ID: <a href="https://orcid.org/0009-0000-1794-9747​">https://orcid.org/0009-0000-1794-9747​</a></p>
+         <p style="text-align: justify; ">Yuqi graduated from Tianjin University with a BA Degree in English and from HKUST with an MPhil Degree in Humanities. She is interested in aging and the bilingual effect on cognition. She is now working on how language and other experiences (e.g., learning and using more than one language, music training, etc.) benefit one's cognitive abilities (e.g., attention and memory). Her MPhil thesis studied how individual bilingual experiences of younger Cantonese-English speakers influence the attentional control ability in a Forced-attention Dichotic Listening Task of Cantonese tones. Yuqi's Ph.D study is funded by the <a href="https://cerg1.ugc.edu.hk/hkpfs/index.html">Hong Kong PhD Fellowship</a>.</p>
       </div>
    </div>
 
@@ -311,11 +311,11 @@
          <img src="thumbs/Photo_Kangdi.jpg" alt="Kangdi Liu" style="width: 100%; height: auto;"/>
       </div>   
       <div class="text-content" style="flex: 1;">
-         <h4 style="text-align: left; margin-top: 0; margin-left: 55px;">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
-	 <p style="font-size: 18px; margin-bottom: 5px; margin-left: 55px;"><b>MPhil Student</b></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; margin-left: 55px;">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
-	 <p style="font-size: 18px; margin-top: 5px; margin-left: 55px;">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
-         <p style="text-align: justify; margin-left: 55px;">Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
+         <h4 style="text-align: left; margin-top: 0; ">Kangdi LIU 劉康迪 (BA: NENU; MA: Nankai)</h4>
+	 <p style="font-size: 18px; margin-bottom: 5px; "><b>MPhil Student</b></p>
+	 <p style="font-size: 18px; margin-top: 5px; margin-bottom: 5px; ">kliubc@connect.ust.hk; <a href="https://www.researchgate.net/profile/Kangdi-Liu">ResearchGate</a>, <a href="files/CV_Kangdi_new.pdf">CV</a></p>
+	 <p style="font-size: 18px; margin-top: 5px; ">ORCID ID: <a href="https://orcid.org/0009-0008-1548-4040​">https://orcid.org/0009-0008-1548-4040​</a></p>
+         <p style="text-align: justify;">Kangdi graduated from Nankai University with a master's degree in Linguistics and Applied Linguistics. She is interested in phonetics and psycholinguistics, especially focusing on Chinese tones. Her past project studied tone variation and change in the Chinese dialects/languages. At present, she is working on the beneficial effect of prior knowledge on older adults’ memory consolidation in nonnative tone learning.</p>
       </div>
    </div>
 </section>
