--- a/people.html
+++ b/people.html
@@ -221,7 +221,7 @@
    <hr>
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
-         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;" >
+         <img src="thumbs/Photo_Susu.jpg" alt="Susu Lai" style="width: 100%; height: auto;"/ >
       </div>
       <div class="text-content" style="flex: 1; margin-bottom: 10px;">
          <h4 style="text-align: left; margin-top: 0;">Susu LAI 賴素素 (BA: Hunan U; MA: HKU)</h4>
