--- a/people.html
+++ b/people.html
@@ -201,9 +201,10 @@
    </div>
 </div>
 </div>
+</div>
 
 
-<hr>
+
 <section id="staff">
    <div class="row-fluid" style="display: flex; align-items: flex-start; padding-top: 20px; flex-wrap: wrap;">
       <div class="image-content" style="flex: 0 0 auto; margin-right: 20px; width: 200px;">
