--- a/people.html
+++ b/people.html
@@ -108,7 +108,7 @@
          </div>
       </div>
    </div>
-
+</div>
 <!-- 外部容器，确保页面内容不会超过指定宽度 -->
 <div class="container" style="max-width: 1200px; padding-top: 0; margin-top: 0;">
 	<div class="span10">
