--- a/people.html
+++ b/people.html
@@ -347,6 +347,14 @@
       </div>
    </div>
    <div class="row-fluid">
+      <div class="text-content" style="flex: 1;">
+         <p style="text-align: left; line-height: 1.6; margin-left: 10px">· Yuxin ZHU (MGCS Research Assistant, 2021-2022)</p>
+         <p style="text-align: left; line-height: 1.6;">· Martin, Yu Ting LEE (RPG Research Assistant, 2021)</p>
+         <p style="text-align: left; line-height: 1.6;">· Minzhi GONG (Research Assistant,  2020)</p>
+         <p style="text-align: left; line-height: 1.6;">· Weijie TAN (Research Assistant,  2019)</p>
+   </div>
+   </div>
+   <div class="row-fluid">
       <div class="span3">
          <!-- Placeholder for consistency -->
          <div style="width: 0px; height: 100px;"></div>
