--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
         <div class="navbar">
           <div class="navbar-inner">
               <button class="hamburger-button" onclick="toggleMenu()">☰</button>
-              <ul class="nav" id="menu">
-                <li class="active"><a href="#">Home</a></li>
+              <ul class="nav active" id="menu">
+                <li><a href="#">Home</a></li>
                 <li><a href="people.html">Members</a></li>
                 <li><a href="publications.html">Publications</a></li>
                 <li><a href="facilities.html">Facilities</a></li>
@@ -159,7 +159,7 @@
             margin: 10px 0;
           }
       
-          .nav.active {
+          .active {
             display: flex; /* 点击按钮后显示 */
           }
         }
