--- a/index.html
+++ b/index.html
@@ -104,6 +104,7 @@
       <div class="masthead">
         <div class="navbar">
           <div class="navbar-inner">
+             <div class="container">
               <button class="hamburger-button" onclick="toggleMenu()">☰</button>
               <ul class="nav active" id="menu">
                 <li><a href="#">Home</a></li>
@@ -113,6 +114,7 @@
                 <li><a href="media.html">Collaboration & Outreach</a></li>
               </ul>
             </div>
+         </div> 
         </div>
       </div>
       
