--- a/people.html
+++ b/people.html
@@ -215,7 +215,7 @@
 	      imageContent.style.marginBottom = '20px'; // 图片和文字之间增加间距
 	    } else {
 	      contentBlock.style.display = 'flex'; // 大屏幕时水平布局
-	      textContent.style.marginLeft = '20px'; // 保持文字左边距与图片对齐
+	      // textContent.style.marginLeft = '20px'; // 保持文字左边距与图片对齐
 	      imageContent.style.marginRight = '20px'; // 保持图片右边距
 	      imageContent.style.marginBottom = '0'; // 移除间距
 	    }
