--- a/index.html
+++ b/index.html
@@ -180,9 +180,9 @@
           const isSmallScreen = window.innerWidth <= 768;
           const menu = document.getElementById('menu');
       
-          if (!isSmallScreen) {
-            menu.classList.remove('active'); // 在大屏幕时默认显示
-          }
+          // if (!isSmallScreen) {
+          //   menu.classList.remove('active'); // 在大屏幕时默认显示
+          // }
         };
       
         // 初始化布局
