--- a/people.html
+++ b/people.html
@@ -15,10 +15,10 @@
 	<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
       <style>
          a {
-             color: #5048D3;
+             color: #6555C2;
          }
          a:hover {
-             color: #5048D3; /* Optional: Set a different color when hovering */
+             color: #6555C2; /* Optional: Set a different color when hovering */
          }
          ol {
             display: block;
