--- a/media.html
+++ b/media.html
@@ -274,7 +274,7 @@
    		   <img src="files/Media 3.png" alt="media_workshop.png" />
  		   </div>
  		   <div class="span9">
-  		    <p><a href="https://www.youtube.com/watch?v=9TTqab5WpmY" target="_blank" style="color: #515151;">[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</a></p>
+  		    <p><a href="https://www.youtube.com/watch?v=9TTqab5WpmY" target="_blank" style="color: #515151;"><b>[Dec 2022] Quentin Qin's talk on the Better Sleep, Smarter Brain Workshop.</b></a></p>
   		    <i>Faculty of Arts and Social Sciences, HKBU​</i>
  		   </div>
 		 </div>
